Changelog
=========

v0.2.0.0
========

Not released yet.

- New: Automatically serialize properties names to lower-case. 
- New: DeleteAsync() deletes all contents from ResourceName endpoint.
- New: DeleteAsync(resourceName) deletes all contents from resourceName endpoint.
- New: Support for bulk PostAsync methods.
- New: BearerAuthenticator class adds support for Bearer token authentication.
- New: support for including deleted documents in queries. Requires SOFT_DELETE
  feature to be enabled on the server.
- New: support for raw queries.

- Fix: properly serialize DateTime properties to match Eve's RFC1123 format.
- Fix: DeleteAsync(obj) with obj's Meta.DocumentId at null would request a resource instead of a document delete.
- Fix: Edit methods still try to execute when Meta.ETag field is null. 
- Fix: edit methods where obj's Meta.ETag is could request the whole contents delete.
- Fix: use .ConfigureAndWait(false) when invoking HttpClient methods for
  improved resilience.
- Fix: If-Modified-Since was not respected in GetAsync.

- Change: switch from Profile7 to Profile259
- Change: drop support for .NET4

v0.1.0.1
========

Released on 26 November, 2014

- Initial release.